JSAI/error/src/test/resources/base/v014.js
var y = 0;

function id(x) {
	var y;
	y = x;
	return y;
}

y = id(1);
y = id("blah");

print(y);


